# afbd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RTL.cpp  a.cpp  instruction.cpp  instruction.h  main.cpp  module.cpp  process.cpp  process.h  subset.md  var.cpp  var.h
3rd/libs/subcircuit/: subcircuit.cc
3rd/yosys/: ast.cc  calc.cc  const2ast.cc  dpicall.cc  genrtlil.cc  ilang_backend.cc  log.cc  preproc.cc  register.cc  select.cc  simplify.cc  verilog_frontend.cc  verilog_lexer.cc  verilog_parser.tab.cc  verilog_parser.y  yosys.cc  yosys_rtlil.cc
3rd/yosys/include/: ast.h  celltypes.h  ilang_backend.h  log.h  macc.h  register.h  satgen.h  sigtools.h  utils.h  verilog_frontend.h  verilog_parser.tab.hh  yosys.h  yosys_rtlil.h
eg/: counter.v  entry.cpp  run.sh
eg2/: complex_op10_afbd.v  complex_op10_iv.v  complex_op10_verilator.v  complex_op11_afbd.v  complex_op11_iv.v  complex_op11_verilator.v  complex_op12_afbd.v  complex_op12_iv.v  complex_op12_verilator.v  complex_op13_afbd.v  complex_op13_iv.v  complex_op13_verilator.v  complex_op14_afbd.v  complex_op14_iv.v  complex_op14_verilator.v  complex_op15_afbd.v  complex_op15_iv.v  complex_op15_verilator.v  complex_op16_afbd.v  complex_op16_iv.v  complex_op16_verilator.v  complex_op17_afbd.v  complex_op17_iv.v  complex_op17_verilator.v  complex_op1_afbd.v  complex_op1_iv.v  complex_op1_verilator.v  complex_op2_afbd.v  complex_op2_iv.v  complex_op2_verilator.v  complex_op3_afbd.v  complex_op3_iv.v  complex_op3_verilator.v  complex_op4_afbd.v  complex_op4_iv.v  complex_op4_verilator.v  complex_op5_afbd.v  complex_op5_iv.v  complex_op5_verilator.v  complex_op6_afbd.v  (+11 more)
eg3/: complex_op1_afbd.v  complex_op1_iv.v  complex_op2_afbd.v  complex_op2_iv.v  complex_op3_afbd.v  complex_op3_iv.v  complex_op4_afbd.v  complex_op4_iv.v  complex_op5_afbd.v  complex_op5_iv.v
example/: ar.v  complex_op2_afbd.v  complex_op2_iv.v  complex_op2_verilator.v  complex_op_afbd.v  complex_op_iv.v  complex_op_verilator.v  counter_afbd.v  counter_b_afbd.v  counter_b_iv.v  counter_b_verilator.v  counter_verilator.v  example.cpp  example.json  example.v  ipbdp_hier.v  ipbdp_hier_afbd.v  itc99_b12.v  itc99_b13.v  pi_bus.v  run.py  sdlx_control.v  zdlx_impl.v_for_pred.v
include/afbdil/: afbdil  expr.h  instruction.h  module.h  module_serializer.h  patternmatching.h  process.h  var.h
include/rtlil/: constant.h  def.h  expr.h  instruction.h  module.h  module_serializer.h  patternmatching.h  process.h  rtlil  var.h
include/transpiler/: afbdilpass.h  rtlilpass.h  transpiler.h
output/: expected.cpp
src/: constant.cpp  instruction.cpp  module.cpp  var.cpp
src/afbdil/: def.cpp  expr.cpp  instruction.cpp  module.cpp  module_serializer.cpp  patternmatching.cpp  process.cpp  var.cpp
src/patternmatchings/: Untitled Document  clkcheck.cpp
src/rtlil/: def.cpp  expr.cpp  instruction.cpp  module.cpp  module_serializer.cpp  patternmatching.cpp  process.cpp  var.cpp
src/transpiler/: afbdilpass.cpp  rtlilpass.cpp  transpiler.cpp
static/: static  static.cpp  static.h
static/test/: test.cpp
